determine dot or dash based on duration of mouse click

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <input type="text">
     <input type="text">
-    <div id="morse-input">You pressed 0 milliseconds</div>
+    <div id="morse-input"></div>
     <button id="morse-key">Key</button>
 
     <script src="./script.js"></script>
