implement translating morse code to text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <input type="text">
     <input type="text">
-    <div id="morse-input"></div>
+    <div>Current Input: <span id="morse-input"></span></div>
+    <div>Translated Input: <span id="translated-input"></span></div>
     <button id="morse-key">Key</button>
 
     <script src="./script.js"></script>
