implement inputting text box value with morse code

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text">
-    <input type="text">
+    <input type="text" id="username" readonly>
+    <input type="text" id="password" readonly>
     <div>Current Input: <span id="morse-input"></span></div>
     <div>Translated Input: <span id="translated-input"></span></div>
     <button id="morse-key">Key</button>
