implement opening and closing input panel

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <input type="text" id="username" readonly>
     <input type="text" id="password" readonly>
-    <div>Current Input: <span id="morse-input"></span></div>
-    <div>Translated Input: <span id="translated-input"></span></div>
-    <button id="morse-key">Key</button>
+    <div id="input-panel">
+        <button id="close-btn">Close</button>
+        <div>Current Input: <span id="morse-input"></span></div>
+        <!-- <div>Translated Input: <span id="translated-input"></span></div> -->
+        <button id="morse-key">Key</button>
+    </div>
+
 
     <script src="./script.js"></script>
 </body>
