add confirm password field

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="login-form-container">
-        <form id="login-form" class="login-form">
-            <label for="username" class="login-form-label">Username</label>
+    <div class="signup-form-container">
+        <form id="signup-form" class="signup-form">
+            <label for="username" class="signup-form-label">Username</label>
             <input type="text" id="username" class="input-field" readonly>
-            <label for="password" class="login-form-label">Password</label>
+            <label for="password" class="signup-form-label">Password</label>
             <input type="text" id="password" class="input-field" readonly>
+            <label for="confirm-password" class="signup-form-label">Confirm Password</label>
+            <input type="text" id="confirm-password" class="input-field" readonly>
             <button class="submit-btn">Submit</button>
         </form>
     </div>
