add transition to input panel, fix input panel position

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
             <button class="submit-btn">Submit</button>
         </form>
     </div>
-    <div id="input-panel">
-        <button id="close-btn">&times;</button>
-        <div>Current Input: <span id="morse-input"></span></div>
-        <!-- <div>Translated Input: <span id="translated-input"></span></div> -->
-        <button id="morse-key">Key</button>
+    <div class="input-panel-container" id="input-panel-container">
+        <div id="input-panel">
+            <button id="close-btn">&times;</button>
+            <div>Current Input: <span id="morse-input"></span></div>
+            <!-- <div>Translated Input: <span id="translated-input"></span></div> -->
+            <button id="morse-key">Key</button>
+        </div>
     </div>
 
 
