add link to wikipedia, add telegraph key and simple styling

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
     </div>
     <div class="input-panel-container" id="input-panel-container">
         <div id="input-panel">
+            <a href="https://en.wikipedia.org/wiki/Morse_code" target="_blank" class="help-btn">Help</a>
             <button id="close-btn">&times;</button>
             <div>Current Input: <span id="morse-input"></span></div>
             <!-- <div>Translated Input: <span id="translated-input"></span></div> -->
-            <button id="morse-key">Key</button>
+            <button id="morse-key"><img src="./image/machine_denken.png"></button>
         </div>
     </div>
 
