update to-do list, change target of the link to wikipedia

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="input-panel-container" id="input-panel-container">
         <div id="input-panel">
-            <a href="https://en.wikipedia.org/wiki/Morse_code" target="_blank" class="help-btn">Help</a>
+            <a href="https://en.wikipedia.org/wiki/Morse_code" class="help-btn">Help</a>
             <button id="close-btn">&times;</button>
             <div>Current Input: <span id="morse-input"></span></div>
             <!-- <div>Translated Input: <span id="translated-input"></span></div> -->
