add heading, add box-shadow, add name for form fields

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <div class="signup-form-container">
+        <h1 class="signup-form-title">Create your account</h1>
         <form id="signup-form" class="signup-form">
             <label for="username" class="signup-form-label">Username</label>
-            <input type="text" id="username" class="input-field" readonly>
+            <input type="text" name="username" id="username" class="input-field" readonly>
             <label for="password" class="signup-form-label">Password</label>
-            <input type="text" id="password" class="input-field" readonly>
+            <input type="text" name="password" id="password" class="input-field" readonly>
             <label for="confirm-password" class="signup-form-label">Confirm Password</label>
-            <input type="text" id="confirm-password" class="input-field" readonly>
+            <input type="text" name="confirm-password" id="confirm-password" class="input-field" readonly>
             <button class="submit-btn">Submit</button>
         </form>
     </div>
@@ -27,6 +28,15 @@
             <button id="morse-key-btn">
                 <!-- <img src="./image/machine_denken.png"> -->
                 <svg id="morse-key" width="300" height="150" viewBox="0 0 300 150">
+
+                    <!-- spring -->
+                    <g id="spring">
+                        <path d="M 145 60 L 150 60 
+                                L 144 64 L 151 64
+                                L 143 69 L 152 69
+                                L 142 74 L 153 74
+                                L 141 79 L 154 79" fill="none" stroke="gray" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                    </g>
 
                     <!-- lever -->
                     <g id="lever" transform="rotate(-1, 113, 55)"> <!-- rest angle: -1; pressed angle: 3 -->
@@ -53,14 +63,6 @@
                     <rect x="100" y="55" width="26" height="25" fill="gray" />
                     <circle cx="113" cy="55" r="13" fill="#909090" />
 
-                    <!-- spring -->
-                    <g id="spring">
-                        <path d="M 145 60 L 150 60 
-                                L 144 64 L 151 64
-                                L 143 69 L 152 69
-                                L 142 74 L 153 74
-                                L 141 79 L 154 79" fill="none" stroke="gray" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
-                    </g>
                 </svg>
             </button>
         </div>
