play morse code audio; modify script.js: tidy up comments and duplicated DOM elements

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </div>
 
-
+    <audio id="audio" src="./audio.mp3" loop></audio>
     <script src="./script.js"></script>
 </body>
 </html>
