add finger; modify mouse events; change background color;

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                  <button class="help-btn" onclick="location.href='https://en.wikipedia.org/wiki/Morse_code'"></button>
             </div>
             <div id="input-panel-right">
+                <img src="./finger.svg" id="finger">
                 <button id="morse-key-btn">
                     <svg id="morse-key" width="300" height="140" viewBox="0 0 300 140">
 
@@ -86,7 +87,6 @@
 
                     </svg>
                 </button>
-
             </div>
         </div>
     </div>
