add clear username field functionality

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1 class="signup-form-title">Create your account</h1>
         <form id="signup-form" class="signup-form">
             <label for="username" class="signup-form-label">Username</label>
+            <span id="username-clear">&times;</span>
             <input type="text" name="username" id="username" class="input-field" readonly>
             <label for="password" class="signup-form-label">Password</label>
             <input type="text" name="password" id="password" class="input-field" readonly>
