check empty field, check input length, match pattern, add welcome message

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="signup-form-container">
         <h1 class="signup-form-title">Create your account</h1>
-        <form id="signup-form" class="signup-form">
+        <form id="signup-form" class="signup-form" method="POST">
             <label for="username" class="signup-form-label">Username</label>
             <span id="username-clear">&times;</span>
             <input type="text" name="username" id="username" class="input-field" readonly>
@@ -109,5 +109,6 @@
 
     <audio id="audio" src="./audio.mp3" loop></audio>
     <script src="./script.js"></script>
+    <script src="./form-submission.js"></script>
 </body>
 </html>
