change input type to password; tidy up debugging variables in script.js

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <span id="username-clear">&times;</span>
             <input type="text" name="username" id="username" class="input-field" readonly>
             <label for="password" class="signup-form-label">Password</label>
-            <input type="text" name="password" id="password" class="input-field" readonly>
+            <input type="password" name="password" id="password" class="input-field" readonly>
             <label for="confirm-password" class="signup-form-label">Confirm Password</label>
-            <input type="text" name="confirm-password" id="confirm-password" class="input-field" readonly>
+            <input type="password" name="confirm-password" id="confirm-password" class="input-field" readonly>
             <button class="submit-btn">Submit</button>
         </form>
     </div>
@@ -25,8 +25,6 @@
         <div id="input-panel">
             
             <div id="input-panel-left">
-                <!-- <div class="current-input">Current Input: <span id="morse-input"></span></div> -->
-                <!-- <div>Translated Input: <span id="translated-input"></span></div> -->
                 <button class="help-btn" onclick="location.href='https://en.wikipedia.org/wiki/Morse_code'">
                     <svg width="120" height="160" viewBox="-10 10 140 150">
                         <!-- shape: rectangle, width: 120, height: 170 -->
