--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1920">
-    <title>Document</title>
+    <title>Morse Input Login</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="signup-form-container">
@@ -20,6 +21,7 @@
             <button class="submit-btn">Submit</button>
         </form>
     </div>
+    <a href="https://github.com/minglaitin/badUI-morse-input" target="_blank" id="source-code"><i class="fa fa-github" aria-hidden="true"></i>Source code</a>
     <div class="input-panel-container" id="input-panel-container">
         <button id="close-btn">&times;</button>
         <div id="input-panel">
